[gd_scene load_steps=12 format=3 uid="uid://c22uktnvrb4vg"]

[ext_resource type="Texture2D" uid="uid://ddp3lbcegi5pw" path="res://assets/DesertTilemapBlankBackground.png" id="1_gi7lq"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_jyg1g"]
[ext_resource type="Script" path="res://scripts/roadContainer.gd" id="2_6yma2"]
[ext_resource type="PackedScene" uid="uid://dyfckt5l4cgcf" path="res://scenes/frog.tscn" id="2_wwvi6"]
[ext_resource type="PackedScene" uid="uid://bbl2bgo2gqf4i" path="res://scenes/terrainOne.tscn" id="3_02g5k"]
[ext_resource type="Script" path="res://scripts/killableObjects.gd" id="5_2jv88"]
[ext_resource type="PackedScene" uid="uid://dg6jtqj58xmwy" path="res://scenes/hud.tscn" id="5_ucfa4"]
[ext_resource type="PackedScene" uid="uid://sv54eroqo6ni" path="res://scenes/pauseMenu.tscn" id="8_12a5i"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pvga2"]
texture = ExtResource("1_gi7lq")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
10:0/0 = 0
10:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0 = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0
10:1/0 = 0
10:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:1/0/physics_layer_0/angular_velocity = 0.0
11:1/0 = 0
11:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
10:2/0 = 0
10:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:2/0/physics_layer_0/angular_velocity = 0.0
12:2/0 = 0
12:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:2/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
8:3/0 = 0
8:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
10:3/0 = 0
10:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:3/0/physics_layer_0/angular_velocity = 0.0
11:3/0 = 0
11:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:3/0/physics_layer_0/angular_velocity = 0.0
12:3/0 = 0
12:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:3/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
8:4/0 = 0
8:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:4/0/physics_layer_0/angular_velocity = 0.0
9:4/0 = 0
9:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:4/0/physics_layer_0/angular_velocity = 0.0
10:4/0 = 0
10:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:4/0/physics_layer_0/angular_velocity = 0.0
11:4/0 = 0
11:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:4/0/physics_layer_0/angular_velocity = 0.0
12:4/0 = 0
12:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:4/0/physics_layer_0/angular_velocity = 0.0
13:4/0 = 0
13:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:4/0/physics_layer_0/angular_velocity = 0.0
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
6:5/0 = 0
6:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:5/0/physics_layer_0/angular_velocity = 0.0
7:5/0 = 0
7:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:5/0/physics_layer_0/angular_velocity = 0.0
8:5/0 = 0
8:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:5/0/physics_layer_0/angular_velocity = 0.0
9:5/0 = 0
9:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:5/0/physics_layer_0/angular_velocity = 0.0
10:5/0 = 0
10:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:5/0/physics_layer_0/angular_velocity = 0.0
11:5/0 = 0
11:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:5/0/physics_layer_0/angular_velocity = 0.0
12:5/0 = 0
12:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:5/0/physics_layer_0/angular_velocity = 0.0
13:5/0 = 0
13:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:5/0/physics_layer_0/angular_velocity = 0.0
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
2:6/0 = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
3:6/0 = 0
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
5:6/0 = 0
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
6:6/0 = 0
6:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:6/0/physics_layer_0/angular_velocity = 0.0
7:6/0 = 0
7:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:6/0/physics_layer_0/angular_velocity = 0.0
8:6/0 = 0
8:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:6/0/physics_layer_0/angular_velocity = 0.0
9:6/0 = 0
9:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:6/0/physics_layer_0/angular_velocity = 0.0
10:6/0 = 0
10:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:6/0/physics_layer_0/angular_velocity = 0.0
11:6/0 = 0
11:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:6/0/physics_layer_0/angular_velocity = 0.0
12:6/0 = 0
12:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:6/0/physics_layer_0/angular_velocity = 0.0
13:6/0 = 0
13:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:6/0/physics_layer_0/angular_velocity = 0.0
0:7/0 = 0
0:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:7/0/physics_layer_0/angular_velocity = 0.0
1:7/0 = 0
1:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:7/0/physics_layer_0/angular_velocity = 0.0
2:7/0 = 0
2:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:7/0/physics_layer_0/angular_velocity = 0.0
3:7/0 = 0
3:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:7/0/physics_layer_0/angular_velocity = 0.0
4:7/0 = 0
4:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:7/0/physics_layer_0/angular_velocity = 0.0
5:7/0 = 0
5:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:7/0/physics_layer_0/angular_velocity = 0.0
6:7/0 = 0
6:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:7/0/physics_layer_0/angular_velocity = 0.0
7:7/0 = 0
7:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:7/0/physics_layer_0/angular_velocity = 0.0
8:7/0 = 0
8:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:7/0/physics_layer_0/angular_velocity = 0.0
9:7/0 = 0
9:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:7/0/physics_layer_0/angular_velocity = 0.0
10:7/0 = 0
10:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:7/0/physics_layer_0/angular_velocity = 0.0
11:7/0 = 0
11:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:7/0/physics_layer_0/angular_velocity = 0.0
12:7/0 = 0
12:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:7/0/physics_layer_0/angular_velocity = 0.0
13:7/0 = 0
13:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:7/0/physics_layer_0/angular_velocity = 0.0
0:8/0 = 0
0:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:8/0/physics_layer_0/angular_velocity = 0.0
1:8/0 = 0
1:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:8/0/physics_layer_0/angular_velocity = 0.0
2:8/0 = 0
2:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:8/0/physics_layer_0/angular_velocity = 0.0
3:8/0 = 0
3:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:8/0/physics_layer_0/angular_velocity = 0.0
4:8/0 = 0
4:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:8/0/physics_layer_0/angular_velocity = 0.0
5:8/0 = 0
5:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:8/0/physics_layer_0/angular_velocity = 0.0
6:8/0 = 0
6:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:8/0/physics_layer_0/angular_velocity = 0.0
7:8/0 = 0
7:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:8/0/physics_layer_0/angular_velocity = 0.0
11:8/0 = 0
11:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:8/0/physics_layer_0/angular_velocity = 0.0
12:8/0 = 0
12:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:8/0/physics_layer_0/angular_velocity = 0.0
13:8/0 = 0
13:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:8/0/physics_layer_0/angular_velocity = 0.0
0:9/0 = 0
0:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:9/0/physics_layer_0/angular_velocity = 0.0
1:9/0 = 0
1:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:9/0/physics_layer_0/angular_velocity = 0.0
2:9/0 = 0
2:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:9/0/physics_layer_0/angular_velocity = 0.0
3:9/0 = 0
3:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:9/0/physics_layer_0/angular_velocity = 0.0
6:9/0 = 0
6:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:9/0/physics_layer_0/angular_velocity = 0.0
7:9/0 = 0
7:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:9/0/physics_layer_0/angular_velocity = 0.0
11:9/0 = 0
11:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:9/0/physics_layer_0/angular_velocity = 0.0
12:9/0 = 0
12:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:9/0/physics_layer_0/angular_velocity = 0.0
13:9/0 = 0
13:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:9/0/physics_layer_0/angular_velocity = 0.0
0:10/0 = 0
0:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:10/0/physics_layer_0/angular_velocity = 0.0
1:10/0 = 0
1:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:10/0/physics_layer_0/angular_velocity = 0.0
2:10/0 = 0
2:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:10/0/physics_layer_0/angular_velocity = 0.0
3:10/0 = 0
3:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:10/0/physics_layer_0/angular_velocity = 0.0
6:10/0 = 0
6:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:10/0/physics_layer_0/angular_velocity = 0.0
7:10/0 = 0
7:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:10/0/physics_layer_0/angular_velocity = 0.0
8:10/0 = 0
8:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:10/0/physics_layer_0/angular_velocity = 0.0
9:10/0 = 0
9:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:10/0/physics_layer_0/angular_velocity = 0.0
10:10/0 = 0
10:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:10/0/physics_layer_0/angular_velocity = 0.0
11:10/0 = 0
11:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:10/0/physics_layer_0/angular_velocity = 0.0
12:10/0 = 0
12:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:10/0/physics_layer_0/angular_velocity = 0.0
13:10/0 = 0
13:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:10/0/physics_layer_0/angular_velocity = 0.0
0:11/0 = 0
0:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:11/0/physics_layer_0/angular_velocity = 0.0
1:11/0 = 0
1:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:11/0/physics_layer_0/angular_velocity = 0.0
2:11/0 = 0
2:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:11/0/physics_layer_0/angular_velocity = 0.0
3:11/0 = 0
3:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:11/0/physics_layer_0/angular_velocity = 0.0
4:11/0 = 0
4:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:11/0/physics_layer_0/angular_velocity = 0.0
5:11/0 = 0
5:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:11/0/physics_layer_0/angular_velocity = 0.0
6:11/0 = 0
6:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:11/0/physics_layer_0/angular_velocity = 0.0
7:11/0 = 0
7:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:11/0/physics_layer_0/angular_velocity = 0.0
8:11/0 = 0
8:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:11/0/physics_layer_0/angular_velocity = 0.0
9:11/0 = 0
9:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:11/0/physics_layer_0/angular_velocity = 0.0
10:11/0 = 0
10:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:11/0/physics_layer_0/angular_velocity = 0.0
11:11/0 = 0
11:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:11/0/physics_layer_0/angular_velocity = 0.0
12:11/0 = 0
12:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:11/0/physics_layer_0/angular_velocity = 0.0
13:11/0 = 0
13:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:11/0/physics_layer_0/angular_velocity = 0.0
0:12/0 = 0
0:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:12/0/physics_layer_0/angular_velocity = 0.0
1:12/0 = 0
1:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:12/0/physics_layer_0/angular_velocity = 0.0
2:12/0 = 0
2:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:12/0/physics_layer_0/angular_velocity = 0.0
3:12/0 = 0
3:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:12/0/physics_layer_0/angular_velocity = 0.0
4:12/0 = 0
4:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:12/0/physics_layer_0/angular_velocity = 0.0
5:12/0 = 0
5:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:12/0/physics_layer_0/angular_velocity = 0.0
6:12/0 = 0
6:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:12/0/physics_layer_0/angular_velocity = 0.0
7:12/0 = 0
7:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:12/0/physics_layer_0/angular_velocity = 0.0
8:12/0 = 0
8:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:12/0/physics_layer_0/angular_velocity = 0.0
9:12/0 = 0
9:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:12/0/physics_layer_0/angular_velocity = 0.0
10:12/0 = 0
10:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:12/0/physics_layer_0/angular_velocity = 0.0
11:12/0 = 0
11:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:12/0/physics_layer_0/angular_velocity = 0.0
13:12/0 = 0
13:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:12/0/physics_layer_0/angular_velocity = 0.0
0:13/0 = 0
0:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:13/0/physics_layer_0/angular_velocity = 0.0
1:13/0 = 0
1:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:13/0/physics_layer_0/angular_velocity = 0.0
2:13/0 = 0
2:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:13/0/physics_layer_0/angular_velocity = 0.0
3:13/0 = 0
3:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:13/0/physics_layer_0/angular_velocity = 0.0
4:13/0 = 0
4:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:13/0/physics_layer_0/angular_velocity = 0.0
5:13/0 = 0
5:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:13/0/physics_layer_0/angular_velocity = 0.0
6:13/0 = 0
6:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:13/0/physics_layer_0/angular_velocity = 0.0
7:13/0 = 0
7:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:13/0/physics_layer_0/angular_velocity = 0.0
8:13/0 = 0
8:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:13/0/physics_layer_0/angular_velocity = 0.0
9:13/0 = 0
9:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:13/0/physics_layer_0/angular_velocity = 0.0
10:13/0 = 0
10:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:13/0/physics_layer_0/angular_velocity = 0.0
0:14/0 = 0
0:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:14/0/physics_layer_0/angular_velocity = 0.0
1:14/0 = 0
1:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:14/0/physics_layer_0/angular_velocity = 0.0
2:14/0 = 0
2:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:14/0/physics_layer_0/angular_velocity = 0.0
3:14/0 = 0
3:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:14/0/physics_layer_0/angular_velocity = 0.0
11:14/0 = 0
11:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:14/0/physics_layer_0/angular_velocity = 0.0
13:14/0 = 0
13:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:14/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_nk7yf"]
physics_layer_0/collision_layer = 1
custom_data_layer_0/name = ""
custom_data_layer_0/type = 0
sources/1 = SubResource("TileSetAtlasSource_pvga2")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ec8gg"]
size = Vector2(240, 16)

[node name="Game" type="Node2D"]
script = ExtResource("1_jyg1g")

[node name="road_container" type="Node2D" parent="."]
script = ExtResource("2_6yma2")

[node name="terrain_1" parent="road_container" instance=ExtResource("3_02g5k")]
position = Vector2(2.08165e-12, 16)

[node name="road" type="TileMap" parent="."]
position = Vector2(31, 16)
tile_set = SubResource("TileSet_nk7yf")
format = 2
layer_0/name = "layer0"
layer_0/tile_data = PackedInt32Array(-131068, 65537, 5, -131067, 65537, 5, -131066, 65537, 5, -131065, 65537, 5, -131064, 65537, 5, -131063, 65537, 5, -131062, 65537, 5, -131061, 65537, 5, -131060, 65537, 5, -196604, 65537, 5, -196603, 65537, 5, -196602, 65537, 5, -196601, 65537, 5, -196600, 65537, 5, -196599, 65537, 5, -196598, 65537, 5, -196597, 65537, 5, -196596, 65537, 5, -196605, 65537, 5, -196606, 65537, 5, -196607, 65537, 5, -196608, 65537, 5, -131073, 65537, 5, -131074, 65537, 5, -65538, 65537, 5, -2, 65537, 5, 65534, 65537, 5, 131070, 65537, 5, 196606, 65537, 5, 262142, 65537, 5, 327678, 65537, 5, 393214, 65537, 5, 458750, 65537, 5, 524286, 65537, 5, -65537, 65537, 5, -1, 65537, 5, 65535, 65537, 5, 131071, 65537, 5, 196607, 65537, 5, 262143, 65537, 5, 327679, 65537, 5, 393215, 65537, 5, 458751, 65537, 5, 524287, 65537, 5, -131072, 65537, 5, -65536, 65537, 5, 0, 65537, 5, 65536, 65537, 5, 131072, 65537, 5, 196608, 65537, 5, 262144, 65537, 5, 327680, 65537, 5, 393216, 65537, 5, 458752, 65537, 5, -131071, 65537, 5, -65535, 65537, 5, 1, 65537, 5, 65537, 65537, 5, 131073, 65537, 5, 196609, 65537, 5, 262145, 65537, 5, 327681, 65537, 5, 393217, 65537, 5, 458753, 65537, 5, -131070, 65537, 5, -65534, 65537, 5, 2, 65537, 5, 65538, 65537, 5, 131074, 65537, 5, 196610, 65537, 5, 262146, 65537, 5, 327682, 65537, 5, 393218, 65537, 5, 458754, 65537, 5, -131069, 65537, 5, -65533, 65537, 5, 3, 65537, 5, 65539, 65537, 5, 131075, 65537, 5, 196611, 65537, 5, 262147, 65537, 5, 327683, 65537, 5, 393219, 65537, 5, 458755, 65537, 5, -65532, 65537, 5, 4, 65537, 5, 65540, 65537, 5, 131076, 65537, 5, 196612, 65537, 5, 262148, 65537, 5, 327684, 65537, 5, 393220, 65537, 5, 458756, 65537, 5, -65531, 65537, 5, 5, 65537, 5, 65541, 65537, 5, 131077, 65537, 5, 196613, 65537, 5, 262149, 65537, 5, 327685, 65537, 5, 393221, 65537, 5, 458757, 65537, 5, -65530, 65537, 5, 6, 65537, 5, 65542, 65537, 5, 131078, 65537, 5, 196614, 65537, 5, 262150, 65537, 5, 327686, 65537, 5, 393222, 65537, 5, 458758, 65537, 5, -65529, 65537, 5, 7, 65537, 5, 65543, 65537, 5, 131079, 65537, 5, 196615, 65537, 5, 262151, 65537, 5, 327687, 65537, 5, 393223, 65537, 5, 458759, 65537, 5, -65528, 65537, 5, 8, 65537, 5, 65544, 65537, 5, 131080, 65537, 5, 196616, 65537, 5, 262152, 65537, 5, 327688, 65537, 5, 393224, 65537, 5, 458760, 65537, 5, -65527, 65537, 5, 9, 65537, 5, 65545, 65537, 5, 131081, 65537, 5, 196617, 65537, 5, 262153, 65537, 5, 327689, 65537, 5, 393225, 65537, 5, 458761, 65537, 5, -65526, 65537, 5, 10, 65537, 5, 65546, 65537, 5, 131082, 65537, 5, 196618, 65537, 5, 262154, 65537, 5, 327690, 65537, 5, 393226, 65537, 5, 458762, 65537, 5, -65525, 65537, 5, 11, 65537, 5, 65547, 65537, 5, 131083, 65537, 5, 196619, 65537, 5, 262155, 65537, 5, 327691, 65537, 5, 393227, 65537, 5, 458763, 65537, 5, -65524, 65537, 5, 12, 65537, 5, 65548, 65537, 5, 131084, 65537, 5, 196620, 65537, 5, 262156, 65537, 5, 327692, 65537, 5, 393228, 65537, 5, 458764, 65537, 5)
layer_1/name = "layer1"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array()

[node name="score_marker" type="Area2D" parent="."]
position = Vector2(119, 102)
script = ExtResource("5_2jv88")

[node name="CollisionShape2D" type="CollisionShape2D" parent="score_marker"]
position = Vector2(0, -62)
shape = SubResource("RectangleShape2D_ec8gg")

[node name="frog" parent="." instance=ExtResource("2_wwvi6")]
position = Vector2(166, -139)

[node name="spawnPosition" type="Marker2D" parent="."]
position = Vector2(119, 103)

[node name="terrain_spawn_first" type="Marker2D" parent="."]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Node2D" type="Node2D" parent="."]

[node name="Hud" parent="Node2D" instance=ExtResource("5_ucfa4")]
z_index = 10
offset_top = -45.0
offset_bottom = -45.0

[node name="pause_menu" parent="Node2D/Hud" instance=ExtResource("8_12a5i")]
visible = false
layout_mode = 1
offset_top = 14.0
offset_bottom = 14.0

[node name="Label" parent="Node2D/Hud/pause_menu" index="1"]
offset_left = 82.0
offset_right = 154.0

[node name="restart" parent="Node2D/Hud/pause_menu" index="2"]
offset_left = 95.0
offset_top = 58.0
offset_right = 141.0
offset_bottom = 75.0

[connection signal="body_entered" from="score_marker" to="." method="_on_score_marker_body_entered"]
[connection signal="frog_die" from="frog" to="." method="_on_frog_frog_die"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="road_container/terrain_1"]
[editable path="road_container/terrain_1/groundline"]
[editable path="road_container/terrain_1/groundline/Line"]
[editable path="road_container/terrain_1/groundline2"]
[editable path="road_container/terrain_1/groundline2/Line"]
[editable path="road_container/terrain_1/waterline"]
[editable path="road_container/terrain_1/waterline/Line"]
[editable path="road_container/terrain_1/groundline3"]
[editable path="road_container/terrain_1/groundline3/Line"]
[editable path="Node2D/Hud/pause_menu"]
